src/tests/errors/variables/002.ura
// errors/variables/002 — using an undefined variable
use "@/header"

main():
    x int = 5
    output(y, "\n")
